--- a/data-knife-ui/login/index.html
+++ b/data-knife-ui/login/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/pages/login.ts"></script>
+    <script type="module" src="/src/login.ts"></script>
   </body>
 </html>
